--- a/index.hbs
+++ b/index.hbs
@@ -7,7 +7,7 @@ id: "root"
 <head>
     <meta charset="UTF-8">
     <title>Middle Front / Chats</title>
-    <script src="src/app.js" type="module"></script>
+    <script src="app.js" type="module"></script>
 </head>
 <body>
 <div id="{{ id }}"></div>
