--- a/index.hbs
+++ b/index.hbs
@@ -7,6 +7,7 @@ id: "root"
 <head>
     <meta charset="UTF-8">
     <title>Middle Front / Chats</title>
+    <link rel="stylesheet" href="style.scss" />
     <script src="app.js" type="module"></script>
 </head>
 <body>
