--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 
-$primary-color: #3369F3;
-$gray-color: #D9DBDD;
+:root{
+  --primary-color: #3369F3;
+  --gray-color: #D9DBDD;
+  --gray--main-color: #EFEFEF;
+  --gray-text-color: #999999;
+  --gray-hover-color: #F2F3F7;
+  --error-color: #DA2F5A;
+}
 
 * {
   padding: 0;
@@ -20,17 +26,18 @@ a {
 input {
   height: 45px;
   padding: 10px;
-  border: 1px solid $gray-color;
+  border: 1px solid var(--gray-color);
   width: 100%;
   border-radius: 5px;
+  font-family: 'Inter', sans-serif;
   &:active,
   &:focus {
-    border: 1px solid $primary-color;
+    border: 1px solid var(--primary-color)
   }
 }
 
 .link {
-  color: $primary-color;
+  color: var(--primary-color);
   display: block;
   &--center {
     text-align: center;
@@ -40,12 +47,24 @@ input {
   }
 }
 
+.input {
+  &--error {
+    border: 1px solid var(--error-color);
+  }
+}
+
 .input-box {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   &__title {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-weight: 600;
     font-size: 14px;
+  }
+  &__error {
+    color: var(--error-color);
+    font-size: 12px;
+    margin-top: 5px;
+    font-weight: 600;
   }
 }
 
