--- a/src/utils/styles/button.scss
+++ b/src/utils/styles/button.scss
@@ -6,6 +6,8 @@
   border-radius: 10px;
   padding: 15px 10px;
   cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
   &:hover {
     opacity: .8;
   }
