--- a/src/pages/chats/chat.style.scss
+++ b/src/pages/chats/chat.style.scss
@@ -85,7 +85,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translateY(-50%);
+    transform: translateY(-20%);
   }
   &__name {
     font-weight: 600;
@@ -103,6 +103,14 @@
   &__message {
     font-size: 14px;
     color: var(--gray-text-color);
+  }
+  &__header {
+    display: flex;
+    gap: 10px;
+  }
+  &__setting-icon-image {
+    width: 12px;
+    height: 12px;
   }
   &--active {
     background: var(--gray-hover-color);
