fix default style

--- a/index.hbs
+++ b/index.hbs
@@ -9,7 +9,7 @@ id: "root"
     <title>Middle Front / Chats</title>
     <link rel="stylesheet" href="style.scss" />
 </head>
-<body>
+<body class="body">
     <div id="{{ id }}"></div>
     <script src="app.js" type="module"></script>
 </body>
