--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -17,19 +17,21 @@
 
 .input-box {
     margin-bottom: 20px;
-}
-
-.input-box__title {
-    margin-bottom: 10px;
-    font-size: 14px;
-    font-weight: 600;
-    display: block;
-}
-
-.input-box__error {
-    color: var(--error-color);
-    margin-top: 5px;
-    font-size: 12px;
-    font-weight: 600;
-    display: none;
+    &__title {
+        margin-bottom: 10px;
+        font-size: 14px;
+        font-weight: 600;
+        display: block;
+    }
+    &__error {
+        color: var(--error-color);
+        margin-top: 5px;
+        font-size: 12px;
+        font-weight: 600;
+        display: none;
+    }
+    &__required {
+        font-size: 12px;
+        color: var(--error-color);
+    }
 }
