--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -6,6 +6,7 @@
     border-radius: 0 10px 10px 10px;
     font-size: 18px;
     margin-bottom: 20px;
+    width: fit-content;
     &--current {
         background: var(--primary-color);
         align-self: end;
