--- a/src/pages/chats/chat.style.scss
+++ b/src/pages/chats/chat.style.scss
@@ -2,16 +2,19 @@
   display: grid;
   grid-template-columns: 440px 1fr;
   height: 100vh;
+
   &__info {
     padding: 20px;
-    border-right: 1px solid var(--gray--main-color);
+    border-right: 1px solid var(--gray-main-color);
   }
+
   &__profile {
     color: var(--gray-text-color);
     margin-bottom: 20px;
   }
+
   &__header {
-    border-bottom: 1px solid var(--gray--main-color);
+    border-bottom: 1px solid var(--gray-main-color);
   }
 }
 
@@ -19,67 +22,77 @@
   display: flex;
   justify-content: space-between;
   padding: 15px 30px;
+
   &__user {
     display: flex;
     align-items: center;
     gap: 20px;
   }
+
   &__username {
     font-weight: 600;
     font-size: 22px;
   }
+
   &__image {
     width: 50px;
     height: 50px;
     border-radius: 100%;
-    background: var(--gray--main-color);
+    background: var(--gray-main-color);
   }
 }
 
 .chat-content {
   $self: &;
+
   padding: 20px;
   display: grid;
   grid-template-rows: 1fr 50px;
   height: 93%;
+
   &__bottom {
-    background: var(--gray--main-color);
+    background: var(--gray-main-color);
     border-radius: 5px;
     height: 60px;
   }
+
   &__control {
     display: grid;
     grid-template-columns: 70px auto 70px;
     align-items: center;
     height: 100%;
   }
+
   &__input {
     background: transparent;
     border: none;
     font-size: 16px;
   }
+
   &__date {
     text-align: center;
     margin: 10px 0;
     color: var(--gray-text-color);
   }
+
   &__scroll {
     display: flex;
     flex-direction: column;
     justify-content: end;
   }
+
   &__icon {
     width: 40px;
     height: 40px;
   }
+
   &__files {
     display: flex;
     justify-content: center;
   }
+
   &__send {
     display: flex;
     justify-content: center;
   }
-
 }
-
