--- a/src/pages/profile/profile.style.scss
+++ b/src/pages/profile/profile.style.scss
@@ -4,14 +4,17 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
+
   &__container {
     max-width: 500px;
     width: 100%;
   }
+
   &__image-block {
     margin-bottom: 30px;
     text-align: center;
   }
+
   &__image {
     width: 150px;
     height: 150px;
@@ -24,9 +27,10 @@
     position: relative;
     overflow: hidden;
     cursor: pointer;
-    &:after {
-      background: rgba(#000, .4);
-      content: '';
+
+    &::after {
+      background: rgba(#000, 0.4);
+      content: "";
       top: 0;
       left: 0;
       right: 0;
@@ -35,8 +39,9 @@
       opacity: 0;
       z-index: 2;
     }
-    &:before {
-      content: 'Поменять аватарку';
+
+    &::before {
+      content: "Поменять аватарку";
       color: #fff;
       top: 50%;
       left: 50%;
@@ -45,43 +50,51 @@
       opacity: 0;
       z-index: 3;
     }
+
     &:hover {
-      &:after {
+      &::after {
         opacity: 1;
       }
-      &:before {
+
+      &::before {
         opacity: 1;
       }
     }
   }
+
   &__name {
     font-weight: 600;
     font-size: 24px;
     margin-top: 20px;
   }
+
   &__row {
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
     border-bottom: 1px solid var(--gray-hover-color);
   }
+
   &__field-name {
     font-weight: 600;
   }
+
   &__bottom {
     margin-top: 60px;
   }
+
   &__link {
     display: block;
     color: var(--primary-color);
     font-weight: 600;
     padding: 10px 0;
+
     &:hover {
       text-decoration: underline;
     }
+
     &--danger {
       color: var(--error-color);
     }
   }
 }
-
