--- a/src/pages/registration/registration.style.scss
+++ b/src/pages/registration/registration.style.scss
@@ -1,20 +1,23 @@
 .registration {
   width: 100vw;
   height: 100vh;
-  background: #E9E9E9;
+  background: #e9e9e9;
   display: flex;
   align-items: center;
   justify-content: center;
+
   &__content {
     width: 400px;
     padding: 50px;
-    background: #ffffff;
+    background: #fff;
     border-radius: 5px;
   }
+
   &__title {
     text-align: center;
     margin-bottom: 30px;
   }
+
   &__link {
     margin-top: 10px;
   }
