--- a/style.scss
+++ b/style.scss
@@ -23,9 +23,16 @@
   text-decoration: none;
   color: var(--primary-color);
   display: block;
+  padding: 10px 0;
+  font-weight: 600;
+  cursor: pointer;
 
   &--center {
     text-align: center;
+  }
+
+  &--danger {
+      color: var(--error-color);
   }
 
   &:hover {
