Добавил сохранение изображения

--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,10 @@
   font-family: Inter, sans-serif;
 }
 
+#root {
+    position: relative;
+}
+
 .link {
   text-decoration: none;
   color: var(--primary-color);
