Фиск комментариев с ревью

--- a/src/pages/chats/chat.style.scss
+++ b/src/pages/chats/chat.style.scss
@@ -143,5 +143,11 @@
   &__send {
     display: flex;
     justify-content: center;
+    border: none;
+
+    & > button {
+      cursor: pointer;
+      border: none;
+    }
   }
 }
