--- a/src/pages/chats/components/ProfileHeader/ProfileHeader.styles.scss
+++ b/src/pages/chats/components/ProfileHeader/ProfileHeader.styles.scss
@@ -10,6 +10,7 @@
     height: 45px;
     border-radius: 100%;
     overflow: hidden;
+    background: var(--gray-hover-color);
 
     img {
       width: 100%;
