--- a/src/components/ChatItems/ChatItems.styles.scss
+++ b/src/components/ChatItems/ChatItems.styles.scss
@@ -17,6 +17,12 @@
     height: 60px;
     border-radius: 100%;
     background: var(--gray-main-color);
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__count-message {
