--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -19,6 +19,10 @@
 .input-box {
   margin-bottom: 20px;
 
+  &--clear {
+    margin: 0;
+  }
+
   &__title {
     margin-bottom: 10px;
     font-size: 14px;
