--- a/style.scss
+++ b/style.scss
@@ -60,6 +60,11 @@
   &--error {
     border: 1px solid var(--error-color);
   }
+
+  &--transparent {
+    background: transparent;
+    border: none;
+  }
 }
 
 .input-box {
