--- a/src/pages/chats/chat.style.scss
+++ b/src/pages/chats/chat.style.scss
@@ -116,6 +116,22 @@
     background: transparent;
     border: none;
     font-size: 16px;
+
+    &-box {
+      .input-box {
+        margin: 0;
+
+        input {
+          outline: none;
+          font-size: 16px;
+
+          &:active,
+          &:focus {
+            border: none;
+          }
+        }
+      }
+    }
   }
 
   &__date {
