--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -39,12 +39,13 @@
   &__spinner {
     width: 30px;
     height: 30px;
-    svg {
-      position: relative;
-      top: 0;
-      left: 0;
-      width: 100%;
-      margin: 0;
-    }
+  }
+
+  &__spinner svg {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    margin: 0;
   }
 }
